--- a/css/index.css
+++ b/css/index.css
@@ -409,28 +409,31 @@ html, body{
 
 
 
-.topic-3{
+
+/* Estilos para todos os dispositivos */
+.topic-3 {
     border-top: 1px solid white;
 }
 
-.topic-3-title{
+.topic-3-title {
     color: white;
-    font-size: 80px;
+    font-size: 60px; /* Reduzindo o tamanho do título para dispositivos menores */
     text-align: center;
-    font-family: 'Dancing Script', cursive; /* fonte do titulo */
+    font-family: 'Dancing Script', cursive;
 }
 
-.topic-3-imgs{
+.topic-3-imgs {
     display: flex;
-    margin: 0 auto; /* Centraliza o conteúdo */
-    max-width: 1200px; /* Defina a largura máxima do contêiner de imagens */
-    flex-wrap: wrap; /* Permite que as imagens se movam para a próxima linha em telas menores */
+    margin: 0 auto;
+    max-width: 100%; /* Usando toda a largura disponível */
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
 }
 
-.topic-3-img-1{
-    width: 500px;
+.topic-3-img {
+    width: 100%; /* As imagens ocuparão toda a largura disponível */
+    max-width: 400px; /* Definindo um tamanho máximo para as imagens */
     border-radius: 20px;
     transition: transform 0.6s ease;
     box-shadow: 1px 1px 20px 1px rgb(255, 255, 255);
@@ -439,66 +442,51 @@ html, body{
     z-index: 10;
 }
 
-.topic-3-img-1:hover{
-    transform: scale(1.15) translateX(-60px);
+.topic-3-img:hover {
+    transform: scale(1.15) translateX(-20px); /* Ajustando a transição das imagens para dispositivos menores */
 }
 
-.topic-3-img-2{
-    width: 500px;
-    border-radius: 20px;
-    transition: transform 0.6s ease;
-    box-shadow: 1px 1px 20px 1px rgb(255, 255, 255);
-    border: 2px solid white;
-    margin: 20px;
-}
-
-.topic-3-img-2:hover{
-    transform: scale(1.25) translateX(-0px);
-}
-
-.topic-3-img-3{
-    width: 500px;
-    border-radius: 20px;
-    transition: transform 0.6s ease;
-    box-shadow: 1px 1px 20px 1px rgb(255, 255, 255);
-    border: 2px solid white;
-    margin: 20px;
-    z-index: 10;
-}
-
-.topic-3-img-3:hover{
-    transform: scale(1.15) translateX(60px);
-}
-
-.topic-3-list{
-    font-size: 19px;
+.topic-3-list {
+    font-size: 16px; /* Reduzindo o tamanho da fonte para dispositivos menores */
     color: white;
     font-family: 'Baloo 2', sans-serif;
-    margin-left: 10%;
+    margin-left: 5%; /* Ajustando a margem para dispositivos menores */
     list-style-image: url(/img/icons/list.png);
     list-style-position: inside;
-    column-count: 2; /* Define o número de colunas */
-    column-gap: 20px; /* Define o espaço entre as colunas */
-
 }
 
-.topic-3-p-1{
-    font-size: 30px;
+.topic-3-p-1 {
+    font-size: 20px; /* Reduzindo o tamanho do texto para dispositivos menores */
     text-align: center;
     font-family: 'Baloo 2', sans-serif;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 5%;
+    margin-right: 5%;
     color: white;
-    padding: 40px;
+    padding: 20px; /* Reduzindo o padding para dispositivos menores */
 }
 
-.topic-3-p-fim{
-    font-size: 20px;
+.topic-3-p-fim {
+    font-size: 16px; /* Reduzindo o tamanho do texto para dispositivos menores */
     color: white;
     font-family: 'Baloo 2', sans-serif;
     opacity: 70%;
     text-align: center;
-    padding: 40px;
+    padding: 20px; /* Reduzindo o padding para dispositivos menores */
+}
+
+/* Estilos para tablets */
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+    .topic-3-img {
+        width: 45%; /* As imagens ocuparão 45% da largura da tela do tablet */
+    }
+}
+
+/* Estilos para telefones */
+@media only screen and (max-width: 767px) {
+    .topic-3-img {
+        width: 90%; /* As imagens ocuparão 90% da largura da tela do telefone */
+        max-width: 300px; /* Definindo um tamanho máximo para as imagens */
+    }
 }
 
 /* fim da section 3 e inicio da section 4 */
