--- a/css/index.css
+++ b/css/index.css
@@ -32,50 +32,51 @@ html, body{
     background-color: #000000; /* fundo ao mexer na barra */
 }
 
-/* Estilos para dispositivos maiores, como computadores e tablets */
-/* Estilos padrão */
-
-.nav-bar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px;
-  background-color: #333;
-  color: white;
+.nav-bar{
+    background-image: black; /* cor de fundo da navbar */
+    display: flex; /* faz com que tudo fique alinhado na horizontal */
+    height: 100px; /* tamanho na vertical */
+    box-shadow: inset 10px 10px 80px 30px black; /* sombra externa, fazendo ter um efeito de opacidade menor */
+    position: fixed; /* fixa, não se mexe ao rolar */
+    margin-bottom: -5%; /* distancia para baixo */
+    margin-top: -4.7%; /* distancia do topo */
+    z-index: 20; /* define a posição dela com relação a outros itens, ficando acima deles por ser maior */
+    width: 100%; /* tamanho na horizontal */
+    align-items: center; /* alinhar todos os itens ao centro */
+    justify-content: space-between; /* alinha os itens no conteiner fazendo ter um espaço igual entre eles */
 }
 
-.nav-title {
-  font-size: 24px; /* Tamanho médio para PC e Tablet */
+.nav-title{
+    font-size: 60px; /* tamanho do meu titulo principal "Aleph Silva Ramos" */
+    justify-content: center; /* alinhar ao centro */
+    align-items: center; /* alinhar ao centro */
+    margin-left: 10%; /* margem a esquerda */
+    width: 30%; /* tamanho total do titlo */
+    font-family: 'Dancing Script', cursive; /* fonte do titulo */
+    margin: 20px 50px 20px 100px; /* margem de todos os cantos */
+    color: #f5f5ff; /* cor do texto */
 }
 
 .icons-bar{
-widht: 2.5rem;
-height: 2.5rem;
+    margin-right: 100px; /* a margem a direita das imagens */
+
 }
 
-.links {
-  display: flex;
+.img-bar{
+    width: 3.5rem; /* tamanho da imagem horizontal */
+    height: 3.5rem; /* tamanho da imagem vertical, nota-se que deixei os valores iguais para ter um quadrado perfeito */
+    margin: 8px; /* margem de uma imagem para outra */
+    transition: 0.4s ease-in-out; /* transição ao passar o mouse por cima, fazendo ele ir e voltar de acordo como eu definir */
 }
 
-.links a {
-  margin-left: 10px;
-}
-
-.links a img {
-  width: 30px; /* Tamanho menor para PC e Tablet */
-  height: 30px; /* Tamanho menor para PC e Tablet */
-}
-
-/* Media queries para telas menores (telefone) */
-@media only screen and (max-width: 768px) {
-  .title {
-    text-align: center; /* Título no meio */
-    font-size: 16px; /* Tamanho menor para telefone */
-  }
-
-  .links {
-    display: none; /* Esconde as imagens para telefone */
-  }
+.img-bar:hover{
+    width: 3.8rem; /* tamanho da imagem horizontal */
+    height: 3.8rem; /* tamanho da imagem vertical, nota-se que deixei os valores iguais para ter um quadrado perfeito */
+    margin: 10px; /* margem de uma imagem para outra */
+    transition: 0.2s; /* tempo da transição */
+    transform: translateX(-2px); /* quanto ele vai andar no eixo X */
+    transform: translateY(-5px); /* quanto ele vai andar no eixo Y */
+    cursor: url('/img/icons/cursor-a.png'), auto; /* cursor especifico */
 }
 
 /* fim da nav-bar e começo do tópico 1 */
@@ -148,209 +149,46 @@ height: 2.5rem;
     z-index: 3; /* posição dela com relação aos outros itens */
 }
 
-.img-span-1{
-    display: block; /* display em bloco, para conseguir manipular ela */
-    position: absolute; /* posição definida de acordo como eu desejar */
-    top: 1%; /* distância do topo */
-    left: 22%; /* distância da esquerda */
-
-}
-
-.img-span-1 img {
-    width: 700px; /* Garante que a imagem ocupe toda a largura do span */
-    height: auto; /* Mantém a proporção da imagem */
-    transform: rotate(5deg); /* me permite manipular em até 360 graus a imagem */
-}
-
-.img-span-2{
-    display: block; /* display em bloco, para conseguir manipular */
-    position: absolute; /* posição definida de acordo como eu desejar */
-    top: 35%; /* distância do topo */   
-    left: 22%; /* distância da esquerda */
-
-}
-
-.img-span-2 img {
-    width: 400px; /* Garante que a imagem ocupe toda a largura do span */
-    height: auto; /* Mantém a proporção da imagem */
-    transform: rotate(-10deg);  /* rotação em até 360 graus */
-}
-
-.img-span-3{
-    display: block; /* display em bloco, para conseguir manipular */
-    position: absolute; /* posição definida de acordo como eu desejar */
-    top: 75%; /* distância do topo */   
-    left: 47%; /* distância da esquerda */
-
-}
-
-.img-span-3 img {
-    width: 700px; /* Garante que a imagem ocupe toda a largura do span */
-    height: auto; /* Mantém a proporção da imagem */
-    transform: rotate(-8deg); /* rotação em até 360 graus */
-    z-index: 1; /* posição do item com relação aos outros */
-}
-
-.img-span-4{
-    display: block; /* display em bloco, para conseguir manipular */
-    position: absolute; /* posição definida de acordo como eu desejar */
-    top: 51.4%; /* distância do topo */
-    left: 25.1%; /* distância da esquerda */
-
-}
-
-.img-span-4 img {
-    width: 700px; /* Garante que a imagem ocupe toda a largura do span */
-    height: auto; /* Mantém a proporção da imagem */
-    transform: rotate(5deg); /* rotação em até 360 graus */
-    z-index: 1; /* posição do item com relação aos outros */
-}
-
-.img-span-5{
-    display: block; /* display em bloco, para conseguir manipular */
-    position: absolute; /* posição definida de acordo como eu desejar */
-    top: 70.4%; /* distância do topo */
-    left: 47.1%; /* distância da esquerda */
-    
-}
-
-.img-span-5 img {
-    width: 180px; /* Garante que a imagem ocupe toda a largura do span */
-    height: auto; /* Mantém a proporção da imagem */
-    z-index: 1; /* posição do item com relação aos outros */
-    border: 2px solid #9fc6cb; /* borda de 2px solida na cor que eu desejei */
-    box-shadow: 1px 1px 20px 2px rgb(255, 255, 255, 0.6); /* sombra */
-    transition: transform 0.6s ease; /* transição */
-}
-
-.img-span-5 img:hover{
-    transform: scale(1.3) translateX(-110px) translateY(10px); /* tamanho em escala, posição no eixo X e Y */
-}
-
-.img-span-6{
-    display: block; /* display em bloco, para conseguir manipular */
-    position: absolute; /* posição definida de acordo como eu desejar */
-    top: 107.4%; /* distância do topo */
-    left: 57.6%; /* distância da esquerda */
-    
-    
-}
-
-.img-span-6 img {
-    width: 300px; /* Garante que a imagem ocupe toda a largura do span */
-    height: auto; /* Mantém a proporção da imagem */
-    z-index: 1; /* posição do item com relação aos outros */
-
-}
-
-.img-span-7{
-    display: block; /* display em bloco, para conseguir manipular */
-    position: absolute; /* posição definida de acordo como eu desejar */
-    top: 114.4%; /* distância do topo */
-    left: 54.6%; /* distância da esquerda */
-    
-    
-}
-
-.img-span-7 img {
-    width: 150px; /* Garante que a imagem ocupe toda a largura do span */
-    height: auto; /* Mantém a proporção da imagem */
-    z-index: 1; /* posição do item com relação aos outros */
-    border: 2px solid #c2b4c5; /* borda */
-    box-shadow: 1px 1px 20px 2px rgb(255, 255, 255, 0.6); /* sombra */
-    transition: transform 0.6s ease; /* transição */
-}
-
-.img-span-7 img:hover{
-    transform: scale(1.3) translateX(-60px) translateY(10px); /* tamanho em escala, posição do eixo X e Y */
-}
-
-.img-span-9{
-    display: block; /* display em bloco, para conseguir manipular */
-    position: absolute; /* posição definida de acordo como eu desejar */
-    top: 114.4%; /* distância do topo */
-    left: 14.6%; /* distância da esquerda */
-}
-
-.img-span-9 img {
-    width: 150px; /* Garante que a imagem ocupe toda a largura do span */
-    height: auto; /* Mantém a proporção da imagem */
-    z-index: 1; /* posição do item com relação aos outros */
-    border: 2px solid #c2b4c5; /* borda */
-    box-shadow: 1px 1px 20px 2px rgb(255, 255, 255, 0.6); /* sombra */
-    transition: transform 0.6s ease; /* transição */
-}
-
-.img-span-9 img:hover{
-    transform: scale(1.2) translateX(-40px) translateY(10px); /* tamanho em escala, posição do eixo Y e X */
-}
-
-.text-span-1{
-    display: block; /* display em bloco, para conseguir manipular */
-    position: absolute; /* posição definida de acordo como eu desejar */
-    opacity: 20%; /* opacidade */
-    top: 15%; /* distância do topo */   
-    font-family: 'Amiri Quran', serif; /* fonte especifica (essa fonte é importada) */
-    color: #9fc6cb; /* cor do texto */
-    font-size: 40px; /* tamanho da letra */
-    left: 3%; /* distância da esquerda */    
-    z-index: 2; /* posição do item com relação aos outros */
-    line-height: 1; /* distância do espaçamento para baixo */
-}
-
-.link-span-1{
-    display: block; /* display em bloco, para conseguir manipular */
-    position: absolute; /* posição definida de acordo como eu desejar */
-    margin-left: 31%; /* margem da esquerda */
-    opacity: 70%; /* opacidade */
-    font-family: 'Baloo 2', sans-serif; /* fonte especifica (essa fonte é importada) */
-    margin-top: 4%; /* margem do topo */  
-    transition: transform 0.8s ease; /* transição */
-    
-}
-
-.link-span-1 a{
-    color: #d7d0d9; /* cor do texto */
-    text-decoration: none; /* remove a linha debaixo */
-    font-size: 30px; /* tamanho da fonte */
-    background: #3f3442; /* cor de fundo */
-    padding: 5px 15px; /* tamanho da sua área */
-    border-radius: 10px; /* curva da borda */
-    border: 3px solid #d7d0d9; /* borda */
-    cursor: url('/img/icons/cursor-a-2.png'), auto; /* cursor especifico */
-}
-
-.link-span-1:hover{
-    transform: translateY(6px); /* transição no eixo Y */
-    opacity: 100%; /* opacidade */
-    
-}
 
 /* fim da section 1 e inicio da section 2 */
 
-/* Estilos para dispositivos maiores */
-.topic-2-imgs {
+.topic-2{
+    background: white;
+    width: 100%;
+    padding: 20px 20px;
+    margin-top: -20px;
+    border-top: 1px solid rgb(255, 255, 255);
+}
+
+.topic-2-title{
+    font-size: 80px;
+    color: white;
+    text-align: center;
+    font-family: 'Dancing Script', cursive; /* fonte do titulo */
+}
+
+.topic-2-imgs{
     display: flex;
-    margin: 0 auto;
-    max-width: 1200px;
-    flex-wrap: wrap;
+    margin: 0 auto; /* Centraliza o conteúdo */
+    max-width: 1500px; /* Defina a largura máxima do contêiner de imagens */
+    flex-wrap: wrap; /* Permite que as imagens se movam para a próxima linha em telas menores */
     align-items: center;
     justify-content: center;
 }
 
-.topic-2-img {
+.topic-2-img-1{
     width: 300px;
-    margin: 5px;
     border-radius: 10px;
+    margin: 5px;
     transition: transform 0.6s ease;
     box-shadow: 1px 1px 20px 1px black;
 }
 
-.topic-2-img:hover {
+.topic-2-img-1:hover{
     transform: scale(1.2);
 }
 
-.topic-2-p-fim {
+.topic-2-p-fim{
     font-size: 20px;
     color: white;
     font-family: 'Baloo 2', sans-serif;
@@ -359,63 +197,32 @@ height: 2.5rem;
     padding: 20px;
 }
 
-/* Estilos para dispositivos menores */
-@media only screen and (max-width: 768px) {
-    .topic-2-img {
-        width: 100%; /* As imagens ocuparão toda a largura disponível */
-        max-width: 250px; /* Definindo um tamanho máximo para as imagens */
-    }
-
-    .topic-2-imgs {
-        justify-content: center; /* Centraliza as imagens em telas menores */
-    }
-}
-
-/* Estilos para computadores */
-@media only screen and (min-width: 1025px) {
-    .topic-2-img {
-        width: 250px; /* Reduzindo um pouco o tamanho das imagens para telas maiores */
-        margin: 10px; /* Aumentando a margem entre as imagens */
-    }
-}
-
-
-/* Estilos para tablets */
-@media only screen and (max-width: 1024px) {
-    .topic-2-img {
-        width: 50%; /* As imagens ocuparão metade da largura da tela do tablet */
-        max-width: 300px; /* Definindo um tamanho máximo para as imagens */
-    }
-
 /* fechamento do topico 2 e abertura do topico 2 */
 
 
 
-
-/* Estilos para todos os dispositivos */
-.topic-3 {
+.topic-3{
     border-top: 1px solid white;
 }
 
-.topic-3-title {
+.topic-3-title{
     color: white;
-    font-size: 60px; /* Reduzindo o tamanho do título para dispositivos menores */
+    font-size: 80px;
     text-align: center;
-    font-family: 'Dancing Script', cursive;
+    font-family: 'Dancing Script', cursive; /* fonte do titulo */
 }
 
-.topic-3-imgs {
+.topic-3-imgs{
     display: flex;
-    margin: 0 auto;
-    max-width: 100%; /* Usando toda a largura disponível */
-    flex-wrap: wrap;
+    margin: 0 auto; /* Centraliza o conteúdo */
+    max-width: 1500px; /* Defina a largura máxima do contêiner de imagens */
+    flex-wrap: wrap; /* Permite que as imagens se movam para a próxima linha em telas menores */
     align-items: center;
     justify-content: center;
 }
 
-.topic-3-img {
-    width: 100%; /* As imagens ocuparão toda a largura disponível */
-    max-width: 400px; /* Definindo um tamanho máximo para as imagens */
+.topic-3-img-1{
+    width: 500px;
     border-radius: 20px;
     transition: transform 0.6s ease;
     box-shadow: 1px 1px 20px 1px rgb(255, 255, 255);
@@ -424,51 +231,67 @@ height: 2.5rem;
     z-index: 10;
 }
 
-.topic-3-img:hover {
-    transform: scale(1.15) translateX(-20px); /* Ajustando a transição das imagens para dispositivos menores */
+.topic-3-img-1:hover{
+    transform: scale(1.15) translateX(-60px);
 }
 
-.topic-3-list {
-    font-size: 16px; /* Reduzindo o tamanho da fonte para dispositivos menores */
+.topic-3-img-2{
+    width: 500px;
+    border-radius: 20px;
+    transition: transform 0.6s ease;
+    box-shadow: 1px 1px 20px 1px rgb(255, 255, 255);
+    border: 2px solid white;
+    margin: 20px;
+}
+
+.topic-3-img-2:hover{
+    transform: scale(1.25) translateX(-0px);
+}
+
+.topic-3-img-3{
+    width: 500px;
+    border-radius: 20px;
+    transition: transform 0.6s ease;
+    box-shadow: 1px 1px 20px 1px rgb(255, 255, 255);
+    border: 2px solid white;
+    margin: 20px;
+    z-index: 10;
+}
+
+.topic-3-img-3:hover{
+    transform: scale(1.15) translateX(60px);
+}
+
+.topic-3-list{
+    font-size: 19px;
     color: white;
     font-family: 'Baloo 2', sans-serif;
-    margin-left: 5%; /* Ajustando a margem para dispositivos menores */
+    margin-left: 10%;
+    flex-wrap: wrap;
     list-style-image: url(/img/icons/list.png);
     list-style-position: inside;
+    column-count: 2; /* Define o número de colunas */
+    column-gap: 20px; /* Define o espaço entre as colunas */
+
 }
 
-.topic-3-p-1 {
-    font-size: 20px; /* Reduzindo o tamanho do texto para dispositivos menores */
+.topic-3-p-1{
+    font-size: 30px;
     text-align: center;
     font-family: 'Baloo 2', sans-serif;
-    margin-left: 5%;
-    margin-right: 5%;
+    margin-left: 10%;
+    margin-right: 10%;
     color: white;
-    padding: 20px; /* Reduzindo o padding para dispositivos menores */
+    padding: 40px;
 }
 
-.topic-3-p-fim {
-    font-size: 16px; /* Reduzindo o tamanho do texto para dispositivos menores */
+.topic-3-p-fim{
+    font-size: 20px;
     color: white;
     font-family: 'Baloo 2', sans-serif;
     opacity: 70%;
     text-align: center;
-    padding: 20px; /* Reduzindo o padding para dispositivos menores */
-}
-
-/* Estilos para tablets */
-@media only screen and (min-width: 768px) and (max-width: 1024px) {
-    .topic-3-img {
-        width: 45%; /* As imagens ocuparão 45% da largura da tela do tablet */
-    }
-}
-
-/* Estilos para telefones */
-@media only screen and (max-width: 767px) {
-    .topic-3-img {
-        width: 90%; /* As imagens ocuparão 90% da largura da tela do telefone */
-        max-width: 300px; /* Definindo um tamanho máximo para as imagens */
-    }
+    padding: 40px;
 }
 
 /* fim da section 3 e inicio da section 4 */
@@ -491,7 +314,7 @@ height: 2.5rem;
 .topic-4-imgs{
     display: flex;
     margin: 0 auto; /* Centraliza o conteúdo */
-    max-width: 1200px; /* Defina a largura máxima do contêiner de imagens */
+    max-width: 1500px; /* Defina a largura máxima do contêiner de imagens */
     flex-wrap: wrap; /* Permite que as imagens se movam para a próxima linha em telas menores */
     align-items: center;
     justify-content: center;
