--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -1040,5 +1040,20 @@ footer{
     padding: 20px;
 }
 
+@media only screen and (max-width: 320px) { 
+
+/* Para telefones menores */
 }
 
+
+@media only screen and (min-width: 321px) and (max-width: 480px) {
+
+/* Para telefones médios */
+}
+
+
+Para telefones maiores: @media only screen and (min-width: 481px) and (max-width: 767px) {
+
+/* Para telefones maiores */
+
+}
